--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
      <div class="wrapper">
             <div class="sidebar">
                 <div class="sidebar-text d-flex flex-column h-95 justify-content-center text-center">
-                    <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/1764158696642.jpg" alt="Image">
+                    <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
                     <h1 class="font-weight-bold">Bertil Lindstrom</h1>
                     <p class="mb-4">
                         Tech Enthusiast | Cybersecurity Specialist | Co-Founder, UptownGlobal <br>Passionate about transforming digital landscapes with secure IT solutions, networking, & tech storytelling—driven by tech, cars, and innovation.
@@ -285,4 +285,5 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
